Update version & README.md